+ master detail food
TODO
* enter food detail :
1. ingredient
2. step
3. detail step + exoplayer video

--- a/app/src/main/res/layout/activity_list_food.xml
+++ b/app/src/main/res/layout/activity_list_food.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mursitaffandi.mursitaffandi_baking.List_food">
+    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.List_food">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
