--- a/app/src/main/res/layout-w400dp/detailfood_list.xml
+++ b/app/src/main/res/layout-w400dp/detailfood_list.xml
@@ -17,20 +17,15 @@
     
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/detailfood_list"
-        android:name="com.mursitaffandi.mursitaffandi_baking.DetailFoodListFragment"
+        android:id="@+id/frg_listFoodDetail"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity"
-        tools:listitem="@layout/detailfood_list_content" />
+        android:layout_weight="2"/>
 
     <FrameLayout
-        android:id="@+id/detailfood_detail_container"
+        android:id="@+id/frg_foodDetail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
