--- a/app/src/main/res/layout/detailfood_list.xml
+++ b/app/src/main/res/layout/detailfood_list.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detailfood_list"
     android:name="com.mursitaffandi.mursitaffandi_baking.DetailFoodListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity"
-    tools:listitem="@layout/detailfood_list_content" />
+    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity">
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:id="@+id/nsv_foodDetail"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:id="@+id/frg_foodDetail"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
+    </android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
