--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="item_width">200dp</dimen>
+    <dimen name="item_width">0dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="detailfoodlist">8dp</dimen>
 </resources>
