+ widget + item step selected color
TODO
* each activity put OnSaveInstanceState
* esspresso UI TEST

--- a/app/src/main/res/layout-sw600dp/detailfood_list.xml
+++ b/app/src/main/res/layout-sw600dp/detailfood_list.xml
@@ -9,7 +9,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity">
+    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodActivity">
 
     <!--
     This layout is a two-pane layout for the Baking
