--- a/app/src/main/res/layout/detailfood_list.xml
+++ b/app/src/main/res/layout/detailfood_list.xml
@@ -4,7 +4,7 @@
     android:name="com.mursitaffandi.mursitaffandi_baking.DetailFoodListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity">
+    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodActivity">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:id="@+id/nsv_foodDetail"
