--- a/app/src/main/res/layout/detailfood_list.xml
+++ b/app/src/main/res/layout/detailfood_list.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:name="com.mursitaffandi.mursitaffandi_baking.DetailFoodListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodActivity">
+    android:layout_height="match_parent">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:id="@+id/nsv_foodDetail"
