--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:id="@+id/iv_item_food"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/cardview_dark_background"
+            android:contentDescription="@string/item_food"
+            android:scaleType="centerInside"
+            android:src="@mipmap/ic_item_food" />
         <TextView
             android:id="@+id/tv_item_title"
             style="?android:textAppearanceLarge"
