--- a/app/src/main/res/layout/fragment_detailfood_list.xml
+++ b/app/src/main/res/layout/fragment_detailfood_list.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
+        android:id="@+id/llfrgdetailfood"
         android:padding="@dimen/detailfoodlist">
 
         <LinearLayout
@@ -34,6 +35,7 @@
         <TextView
             style="?android:textAppearanceLarge"
             android:layout_width="wrap_content"
+            android:id="@+id/tv_frgdetailfood_step"
             android:layout_height="wrap_content"
             android:text="@string/step" />
 
