failed build AS Android Studio Arctic Fox | 2020.3.1 Patch 4                Build #AI-203.7717.56.2031.7935034, built on November 21, 2021                Runtime version: 11.0.10+0-b96-7281165 x86_64                VM: OpenJDK 64-Bit Server VM by JetBrains s.r.o.                macOS 12.1                GC: G1 Young Generation, G1 Old Generation                Memory: 2048M                Cores: 4                Registry: external.system.auto.import.disabled=true                Non-Bundled Plugins: org.jetbrains.kotlin, izhangzhihao.rainbow.brackets, org.intellij.plugins.markdown

--- a/app/src/main/res/layout/new_app_widget_configure.xml
+++ b/app/src/main/res/layout/new_app_widget_configure.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_config_widget"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,10 +39,10 @@
             android:id="@+id/btn_rerequest_widgetfood"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/main_error_icon"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:gravity="center"
+            android:layout_below="@+id/iv_error_widgetfood"
             android:text="@string/btn_rerequest"
             android:textColor="@color/colorPrimaryDark" />
     </RelativeLayout>
