--- a/app/src/main/res/layout/detailfood_list.xml
+++ b/app/src/main/res/layout/detailfood_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:id="@+id/nsv_foodDetail"
         android:layout_height="match_parent">
@@ -13,5 +13,5 @@
             android:layout_height="match_parent">
 
         </FrameLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
