--- a/app/src/main/res/layout/fragment_detailfood_list.xml
+++ b/app/src/main/res/layout/fragment_detailfood_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nsv_detailFoodList"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -39,9 +39,9 @@
             android:layout_height="wrap_content"
             android:text="@string/step" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_detaillistfood_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
