--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_food"
     android:layout_width="match_parent"
@@ -7,7 +7,8 @@
     android:clickable="true"
     app:cardUseCompatPadding="true"
     android:layout_margin="8dp"
-    app:contentPadding="8dp">
+    app:contentPadding="8dp"
+    android:focusable="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,4 +47,4 @@
             android:layout_height="wrap_content"
             android:text="@string/food_servings" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
